# postgresql-playground

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  Rel8Main.hs  cabal.project  cabal.project.freeze  flake.nix  postgresql-playground.cabal  shell.nix  tables.sql
app/: PagilaRel8Main.hs  Rel8Main.hs
app-esqueleto/: PagilaEsqueletoMain.hs
lib/: PagilaRel8.hs
lib-esqueleto/: PagilaEsqueleto.hs
lib-rel8/: PagilaRel8.hs
