cabal-version:      3.4
name:               postgresql-playground
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      rel8 ^>= 1.6.0.0,
                      hasql ^>= 1.8.0.0,
    hs-source-dirs:   lib
    default-language: GHC2021

executable postgresql-playground
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        postgresql-playground

    hs-source-dirs:   app
    default-language: GHC2021
