cabal-version:      3.4
name:               postgresql-playground
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings-language
    ghc-options: -Wall
    default-language: GHC2021

common deps-rel8
    build-depends:    base >=4.17.0.0,
                      rel8 ^>= 1.6.0.0,
                      hasql ^>= 1.8.0.0,
                      bytestring,
                      time,
                      text,

library pagila-rel8
    import:           warnings-language,
                      deps-rel8
    exposed-modules:  PagilaRel8
    hs-source-dirs:   lib-rel8
    visibility:       public

executable postgresql-playground-rel8
    import:           warnings-language,
                      deps-rel8
    main-is:          PagilaRel8Main.hs
    build-depends:    
        postgresql-playground:pagila-rel8,
    hs-source-dirs:   app-rel8

common deps-esqueleto
    build-depends:    base >=4.17.0.0,
                      esqueleto ^>= 3.5.14.0,
                      persistent ^>= 2.14.6.3,
                      persistent-postgresql ^>= 2.13.6.2,
                      bytestring,
                      time,
                      text,
                      transformers,
                      monad-logger,

library pagila-esqueleto
    import:           warnings-language,
                      deps-esqueleto
    exposed-modules:  PagilaEsqueleto
    hs-source-dirs:   lib-esqueleto
    visibility:       public

executable postgresql-playground-esqueleto
    import:           warnings-language,
                      deps-esqueleto
    main-is:          PagilaEsqueletoMain.hs
    build-depends:    
        postgresql-playground:pagila-esqueleto,
    hs-source-dirs:   app-esqueleto
